[gd_scene load_steps=8 format=2]

[ext_resource path="res://img/voceSabia/DiretoraEscola.png" type="Texture" id=1]
[ext_resource path="res://font/AMPLESOFT MEDIUM.OTF" type="DynamicFontData" id=2]
[ext_resource path="res://moduloPais/voceSabia/diretora/Dialogo1.gd" type="Script" id=3]
[ext_resource path="res://img/voceSabia/balao_diretora.png" type="Texture" id=4]
[ext_resource path="res://img/voceSabia/seg_prof1.png" type="Texture" id=5]
[ext_resource path="res://img/voceSabia/seg_prof2.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 57.0
margin_top = 16.0
margin_right = 986.0
margin_bottom = 149.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "

"
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="RichTextLabel"]
wait_time = 0.05
autostart = true

[node name="balao" type="TextureRect" parent="."]
margin_left = 206.204
margin_top = 187.588
margin_right = 384.204
margin_bottom = 334.588
texture = ExtResource( 4 )

[node name="seguir" type="TextureButton" parent="."]
visible = false
margin_left = 413.84
margin_top = 492.599
margin_right = 650.84
margin_bottom = 596.599
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
[connection signal="timeout" from="RichTextLabel/Timer" to="RichTextLabel" method="_on_Timer_timeout"]
[connection signal="hide" from="balao" to="RichTextLabel" method="_on_balao_hide"]
[connection signal="pressed" from="seguir" to="RichTextLabel" method="_on_seguir_pressed"]
